// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PurchaseDialog should initially render with a closed dialog 1`] = `
<glamorous.Div
  onClick={[Function]}
>
  <p>
    children
  </p>
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#fff",
        "padding": 75,
      }
    }
    contentStyle={
      Object {
        "width": "100%",
      }
    }
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}
  >
    <Component
      backgroundColor="#fff"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <glamorous(div)>
      <p>
        genera qr-code
      </p>
    </glamorous(div)>
    <glamorous(h1)>
      Genera QR-Code
    </glamorous(h1)>
    <glamorous(p)>
      Inquadra il QR-Code con il tuo smartphone per aprire il link alla scheda prodotto.
    </glamorous(p)>
    <glamorous(div)>
      <QRCode
        bgColor="#FFFFFF"
        fgColor="#000000"
        level="L"
        size={200}
        value="https://www.leroymerlin.it/catalogo/SLUG123-PROD123-p"
      />
    </glamorous(div)>
  </Dialog>
</glamorous.Div>
`;

exports[`PurchaseDialog should open the dialog once clicked 1`] = `
<glamorous.Div
  onClick={[Function]}
>
  <p>
    children
  </p>
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#fff",
        "padding": 75,
      }
    }
    contentStyle={
      Object {
        "width": "100%",
      }
    }
    modal={false}
    onRequestClose={[Function]}
    open={true}
    repositionOnUpdate={true}
  >
    <Component
      backgroundColor="#fff"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <glamorous(div)>
      <p>
        genera qr-code
      </p>
    </glamorous(div)>
    <glamorous(h1)>
      Genera QR-Code
    </glamorous(h1)>
    <glamorous(p)>
      Inquadra il QR-Code con il tuo smartphone per aprire il link alla scheda prodotto.
    </glamorous(p)>
    <glamorous(div)>
      <QRCode
        bgColor="#FFFFFF"
        fgColor="#000000"
        level="L"
        size={200}
        value="https://www.leroymerlin.it/catalogo/SLUG123-PROD123-p"
      />
    </glamorous(div)>
  </Dialog>
</glamorous.Div>
`;
